--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.0.2",
     "@fontsource/roboto": "^4.5.5",
-    "@fortawesome/fontawesome-free": "^6.1.1",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.2",
     "@types/node": "^18.16.3",
@@ -20,7 +20,7 @@
     "beautiful-react-hooks": "^4.3.0",
     "bootstrap": "5.2.3",
     "enzyme-to-json": "^3.6.2",
-    "gsap": "^3.10.4",
+    "gsap": "^3.11.5",
     "html-react-parser": "^3.0.15",
     "http-proxy-middleware": "^2.0.6",
     "jest-environment-jsdom": "^29.5.0",
@@ -31,7 +31,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
-    "react-bootstrap-typeahead": "^6.0.0-rc.1",
+    "react-bootstrap-typeahead": "^6.1.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.1",
