[machine-tunnel] more of vulnerability cleanup

--- a/web/go/scripts/Dockerfile
+++ b/web/go/scripts/Dockerfile
@@ -4,6 +4,7 @@ LABEL com.dymium.vendor="Dymium" \
       product="Dymium Web Front End"
 RUN apk update && apk add ca-certificates && apk add libpq && apk add gmp && apk add gcompat && rm -rf /var/cache/apk/*      
 RUN apk add curl
+RUN apk add --update --no-cache openssl
 COPY server /server
 COPY admin /admin
 COPY customer /customer
