--- a/Tunnels/go/meshscripts/server/Dockerfile
+++ b/Tunnels/go/meshscripts/server/Dockerfile
@@ -3,6 +3,7 @@ LABEL com.dymium.vendor="Dymium" \
       version="0.1" \
       product="Dymium Mesh Server"
 RUN apk update && apk add ca-certificates && rm -rf /var/cache/apk/*      
+RUN apk add --update --no-cache openssl
 RUN apk add curl
 COPY meshserver /meshserver
 EXPOSE 30000-30050
