--- a/web/js/package.json
+++ b/web/js/package.json
@@ -21,6 +21,8 @@
     "plugins": []
   },
   "dependencies": {
+    "follow-redirects": "^1.15.5",
+    "http-proxy-middleware": "^2.0.6",
     "update-browserslist-db": "^1.0.13"
   }
 }
