--- a/ktDbAnalyzerSvc/build.gradle
+++ b/ktDbAnalyzerSvc/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     implementation "io.ktor:ktor-server-call-logging-jvm"
     implementation "io.ktor:ktor-server-call-id-jvm"
     implementation "io.ktor:ktor-server-netty-jvm"
-    implementation "ch.qos.logback:logback-classic:$logback_version"
+    implementation "ch.qos.logback:logback-core:1.4.14"
+    implementation "ch.qos.logback:logback-classic:1.4.14"
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-slf4j:1.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
@@ -35,7 +36,7 @@ dependencies {
 
     // Databases: jdbc drivers - TODO: add more drivers here
     implementation 'com.mysql:mysql-connector-j:8.2.0'
-    implementation "org.postgresql:postgresql:42.6.0"
+    implementation "org.postgresql:postgresql:42.7.2"
     implementation "com.oracle.database.jdbc:ojdbc8:23.3.0.23.09"
     implementation "com.ibm.db2:jcc:11.5.8.0"
     implementation "org.elasticsearch.plugin:x-pack-sql-jdbc:8.12.0"
