--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -27,6 +27,7 @@
     "beautiful-react-hooks": "^4.3.0",
     "bootstrap": "5.2.3",
     "build": "^0.1.4",
+    "dompurify": "^3.1.0",
     "gsap": "^3.11.5",
     "html-react-parser": "^3.0.15",
     "http-proxy-middleware": "^2.0.6",
